# juristKR

./: .gitignore  README.md  pyproject.toml
bot/: main.py
rag_service/: main.py
rag_service/data/: uk_kr.docx
rag_service/llm/: client.py
rag_service/llm/layers/: base.py  normalizer.py  query.py
rag_service/processing/: chunker.py  docx_reader.py  prepare_data.py
rag_service/rag/: embedder.py  pipeline.py
rag_service/storage/: qdrant_search.py  qdrant_store.py
